@@ -1,3 +1,4 @@
+220408 output improved, termination fixed
 220406 exception handler fix
 220406 config printer fix
 220401 add historical hashing env
